--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ GOOGLE_ID= 206804001043-m622oj22b31mpmpcpes1phelfntepfuq.apps.googleusercontent.
 GOOGLE_SECRET= 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
 
 BASE_URL= http://localhost:3000/
+
+# dsfs
