--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
     "json-server": "^0.17.3",
+    "mongodb": "^5.7.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "postcss": "8.4.27",
