--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ GITHUB_SECRET= ac66e9e38e508e30be3afb41642b970cd0f46690
 GOOGLE_ID= 206804001043-m622oj22b31mpmpcpes1phelfntepfuq.apps.googleusercontent.com
 GOOGLE_SECRET= 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
 
-BASE_URL= http://localhost:3000/
+BASE_URL= https://pc-builder-rho.vercel.app
 
 # dsfs
