--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/react-star-ratings": "^2.3.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -25,6 +26,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-rating": "^2.0.5",
+    "react-star-ratings": "^2.3.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
